# aitree

./: .gitignore  README.md  index.html  index.php  query.php  suggest.php
backup/: aitree.conf
thrift_segment/: segment.thrift
thrift_segment/cpp_server/: CMakeLists.txt  alg_jieba.cpp  alg_jieba.h  build.sh  cppjieba  demo.cpp  makefile  segmentserver.cpp
thrift_segment/cpp_server/gen-cpp/: ArticleService.cpp  ArticleService.h  segment_constants.cpp  segment_constants.h  segment_types.cpp  segment_types.h
thrift_segment/cpp_server/util/: conf_reader.cpp  conf_reader.h
thrift_segment/php_client/: query.php
thrift_segment/php_client/gen-php/Article/: ArticleService.php  Types.php
thrift_segment/php_client/lib/php/: Makefile  Makefile.in
thrift_segment/php_client/lib/php/test/: Makefile  Makefile.in
